feat(api): the procurement data model, one ingredient per real thing, pack sizes, market rate and vendor prices
V144 adds the procurement data model with row-level security on every new table: ingredient
aliases, pack sizes, market-rate history, vendor price history, invoice lines, the deliveries an
invoice bills, and attachments. V145 backfills today's list prices as the first history row, and
V147 lets two ingredients be merged into one.

Duplicates are stopped at the source. Creating or renaming an ingredient that looks like an
existing one is refused unless the person confirms it is different (KMS-400156). "Cashew, halved"
imports as Cashew with a preparation note, and a library copy lists close matches first. A merge
tool combines existing duplicates and moves every reference.

Ingredients get pack sizes and a market rate. The market rate is required whenever someone adds
stock, and costing falls back to it when no vendor has a price. A vendor sells in one pack at a
price per pack, can be given many ingredients in one go, and keeps a price history. There is one
preferred vendor per ingredient.

Adds error codes KMS-400156 to 400179 for the whole rework in one place, including those the later
commits use. Adds the RECEIVE_DELIVERIES and MERGE_INGREDIENTS permissions, and INGREDIENT_MERGED
to the audit log. docs/work/local-v144-reset.sql records how the local database was taken off an
early draft of V144. It is for the local database only.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GmSW5WhFQoSRKwNPu1syvC